# portainer-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/portainer_cli/: __init__.py  cli.py  client.py  config.py
tests/: test_cli.py  test_client.py  test_config.py  test_log_parser.py
