[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zopyx.portainer-cli"
dynamic = ["version"]
description = "Minimal CLI for Portainer container management"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = ["ruff>=0.15"]
test = ["pytest>=8.0", "httpx>=0.24"]

[project.scripts]
portainer-cli = "portainer_cli.cli:main"

[project.urls]
Homepage = "https://github.com/zopyx/portainer-cli"
Source = "https://github.com/zopyx/portainer-cli"
BugTracker = "https://github.com/zopyx/portainer-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/portainer_cli/_version.py"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "N", "W"]

[tool.ruff.format]
preview = true
